# homework_module_6-22-25-

./: .env.sample  .flake8  .gitignore  README.md  catalog_fixture.json  pyproject.toml  requirements.txt
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: home.html
config/: settings.py  urls.py
management/commands/: __init__.py
